--- a/css/normalize.css
+++ b/css/normalize.css
@@ -1,11 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@100;300&display=swap');
 
+@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css');
+
 * {
     /* box-sizing est appliqué à tous les éléments */
     box-sizing: border-box;
     /* font-family */
     font-family: 'Raleway', sans-serif;
 }
+
+/* Utilisation de flexbox : modèle de disposition unidimensionnel
+et comme une méthode permettant de distribuer l'espace
+entre des objets d'une interface ainsi que de les aligner */
 
 /* taille de la page principale */
 .container {
@@ -16,6 +22,7 @@
 /* HEADER */
 
 /* header et barre de navigation */
+/* space-between pour répartir équitablement les élements*/
 header {
     display: flex;
     justify-content: space-between;
@@ -23,33 +30,36 @@ header {
 
 /* NAVIGATION */
 
+/* regroupement des élements au centre en vertical*/
 nav {
     display: flex;
     align-items: center;
 }
 
+/* suppression des . précisant une liste */
+/* display-flex pour les aligner à l'horizontale */
 nav ul {
     list-style-type: none;
     display: flex;
 }
 
-/* Cibler les liens non visités */
+/* cibler les liens non visités */
 nav li a, a:link, a:visited {
     text-decoration: none;
     padding-left: 30px;
     color: #000;
-    padding: 2rem;
+    padding: 35px;
     padding-left: 20px;
 }
 
-/* Cibler les liens activés par l'utilisateur */
+/* cibler les liens activés par l'utilisateur ou déjà définis*/
 nav li .active, a:active {
     color: #0065FC;
     font-weight: 500;
     border-top: 3px #0065FC solid;
 }
 
-/* Apparence au survol avec le pointeur */
+/* apparence au survol avec le pointeur */
 nav li a:hover {
     border-top: 3px #0065FC solid;
     color: #0065FC;
@@ -57,35 +67,156 @@ nav li a:hover {
 
 /* PAGE */
 
-/* .container .container_page {
+.container .containerPage {
+    margin-top: 20px;
     padding: 5px;
 }
 
-.container_page .texte_pub h1 {
+.containerPage h1 {
+    font-size: 30px;
+    font-weight: bold;
+}
+
+.containerPage p {
     font-size: 20px;
 }
 
-.container_page .texte_pub p {
-    margin: 5px;
-} */
-
 /* RECHERCHE */
 
-.container_page .recherche form {
+/* ajustement de tous les élements de la barre */
+.containerPage .search form {
     display: flex;
 }
 
-.container_page .recherche {
-    display: flex;
-    margin-top: 30px;
+.containerPage .search {
+    margin-top: 50px;
 }
 
 /* localisation */
 
-.container_page .recherche .localisation {
+.localisation {
     background-color: #F2F2F2;
     padding: 20px;
     border-top-left-radius: 30%;
     border-bottom-left-radius: 30%;
-    text-align: center;
+}
+
+/* input-search */
+
+.input-search {
+    padding: 20px;
+    font-size: 20px;
+    box-sizing: border-box;
+    border-right: none;
+    border-left: none;
+    border-top: 1px solid #F2F2F2;
+    border-bottom: 1px solid #F2F2F2;
+    font-weight: bold;
+    width: 350px;
+}
+
+/* btn-search */
+
+.btn-search {
+    border-top-right-radius: 2rem;
+    border-bottom-right-radius: 2rem;
+    border: none;
+    padding: 20px;
+    background: #0065FC;
+    color: #fff;
+    font-weight: bold;
+    font-size: 25px;
+    width: 200px;
+}
+
+
+/* désactivation du bouton recherche en mode mobile */
+.mobile-btn-search {
+    display: none;
+}
+
+/* filtres */
+
+.filters {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 40px;
+}
+
+h3 {
+    display: flex;
+    align-items: center;
+    font-weight: 700;
+    margin-right: 20px;
+}
+
+.filtersList {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+
+/* sélection de tous les élements enfants pour appliquer
+les paramétres */
+.filtersList>* {
+    display: flex;
+    align-items: center;
+    margin-right: 20px;
+    border: 2px solid #F2F2F2;
+    border-radius: 2rem;
+    margin-bottom: 10px;
+    font-weight: bold;
+}
+
+
+/* déformation des icônes pour agrandissement */
+.filtersList>*:hover {
+    transform: scale(1.1);
+}
+
+.filtersIcon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #0065FC;
+    font-size: 25px;
+    background-color: #DEEBFF;
+    border-radius: 100%;
+    height: 30px;
+    width: 25px;
+    min-height: 60px;
+    min-width: 60px;
+}
+
+.filterTitle {
+    display: flex;
+    align-items: center;
+    margin: 20px;
+}
+
+/* NOTE */
+
+.note {
+    display: flex;
+    align-items: center;
+    margin-top: 30px;
+}
+
+.infoIcons {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 100%;
+    width: 25px;
+    height: 25px;
+    border: 1px solid #F2F2F2;
+    color: #0065FC;
+    font-size: 0.7em;
+}
+
+.noteText {
+    display: flex;
+    align-items: center;
+    margin: 10px;
 }
