--- a/css/normalize.css
+++ b/css/normalize.css
@@ -173,6 +173,8 @@ les paramétres */
 /* déformation des icônes pour agrandissement */
 .filtersList>*:hover {
     transform: scale(1.1);
+    transition: 0.6s;
+    transition-duration: 0.8s;
 }
 
 .filtersIcon {
@@ -272,6 +274,8 @@ les paramétres */
 
 .containerHostingCards article:hover {
     transform: scale(1.1);
+    transition: 0.6s;
+    transition-duration: 0.8s;
 }
 
 .containerHostingCards .card .image img {
