--- a/css/normalize.css
+++ b/css/normalize.css
@@ -251,6 +251,7 @@ les paramétres */
 }
 
 .hostingCards .more {
+    margin-top: 40px;
     font-size: 25px;
     font-weight: 700;
 }
@@ -353,12 +354,12 @@ les paramétres */
 
 .popular .popularCards article .popularCard .popularImage {
     display: flex;
-    height: 150px;
+    height: auto;
 }
 
 .popular .popularCards article .popularCard .popularImage img {
     width: 40%;
-    height: 150px;
+    height: 180px;
     border-bottom-left-radius: 1em;
     border-top-left-radius: 1em;
     object-fit: cover;
