--- a/css/normalize.css
+++ b/css/normalize.css
@@ -2,6 +2,11 @@
 
 @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css');
 
+body {
+    width: 100%;
+    height: 100%;
+}
+
 * {
     /* box-sizing est appliqué à tous les éléments */
     box-sizing: border-box;
@@ -18,6 +23,7 @@ entre des objets d'une interface ainsi que de les aligner */
     padding-left: 10%;
     padding-right: 10%;
     width: 100%;
+    margin: auto;
 }
 
 /* HEADER */
@@ -79,7 +85,7 @@ nav li a:hover {
 }
 
 .containerPage p {
-    font-size: 20px;
+    font-size: px;
 }
 
 /* RECHERCHE */
@@ -326,8 +332,9 @@ les paramétres */
     background: #F2F2F2;
     border-radius: 20px;
     margin: 10px;
-    width: 30%;
+    width: 40%;
     padding: 20px;
+    flex-wrap: wrap;
 }
 
 .container .containerPage .popular h1 {
@@ -344,6 +351,7 @@ les paramétres */
     padding: 5px;
     border-radius: 1em;
     box-shadow: 0 0 16px #0000002e;
+    align-items: stretch;
 }
 
 .popular .popularCards article:hover {
@@ -354,12 +362,12 @@ les paramétres */
 
 .popular .popularCards article .popularCard .popularImage {
     display: flex;
-    height: auto;
+    height: 180px;
 }
 
 .popular .popularCards article .popularCard .popularImage img {
     width: 40%;
-    height: 180px;
+    height: auto;
     border-bottom-left-radius: 1em;
     border-top-left-radius: 1em;
     object-fit: cover;
@@ -370,12 +378,17 @@ les paramétres */
     justify-content: space-evenly;
     flex-direction: column;
     margin: 5px;
-    height: min-content;
+    height: auto;
 }
 
-.popular .popularCards article .popularCard .popularText h3, p {
+.popular .popularCards article .popularCard .popularText h3 {
     margin: 10px;
-    font-size: 18px;
+    font-size: 17px;
+}
+
+.popular .popularCards article .popularCard .popularText p {
+    margin: 10px;
+    font-size: 17px;
 }
 
 .popular .popularCards article .popularCard .popularText .stars {
