--- a/css/main.css
+++ b/css/main.css
@@ -1,1 +1,5 @@
 @import "/css/body.css";
+@import "/css/footer.css";
+@import "/css/header.css";
+@import "/css/phone.css";
+@import "/css/tablet.css";
