--- a/css/body.css
+++ b/css/body.css
@@ -8,6 +8,8 @@ body {
 }
 
 * {
+    margin: 0;
+    padding: 0;
     /* box-sizing est appliqué à tous les éléments */
     box-sizing: border-box;
     /* font-family */
@@ -20,9 +22,7 @@ entre des objets d'une interface ainsi que de les aligner */
 
 /* taille de la page principale */
 .container {
-    padding-left: 10%;
-    padding-right: 10%;
-    width: 100%;
+    width: 1440px;
     margin: auto;
 }
 
@@ -44,7 +44,7 @@ entre des objets d'une interface ainsi que de les aligner */
     border-radius: 20px;
     margin: 10px;
     padding: 10px;
-    width: 60%;
+    width: 70%;
 }
 
 .hosting-cards h1 {
@@ -141,6 +141,7 @@ entre des objets d'une interface ainsi que de les aligner */
     margin-bottom: 2px;
 }
 
+/* strectch pour étirer au maximum la boîte */
 .popular .popular-cards article {
     background-color: #fff;
     margin: 25px;
@@ -169,6 +170,7 @@ entre des objets d'une interface ainsi que de les aligner */
     object-fit: cover;
 }
 
+/* space-evenly pour garder le même espace */
 .popular .popular-cards article .popular-card .popular-text {
     display: flex;
     justify-content: space-evenly;
@@ -204,8 +206,7 @@ entre des objets d'une interface ainsi que de les aligner */
 
 .activity .activity-cards .container-activity-cards {
     display: flex;
-    flex-flow: row;
-    justify-content: space-between;
+    max-width: fit-content;
     background-color: #fff;
     border-radius: 20px;
 }
@@ -224,10 +225,10 @@ entre des objets d'une interface ainsi que de les aligner */
 }
 
 .activity .activity-cards .container-activity-cards article .activity-image img {
-    width: 400px;
-    height: 450px;
+    width: 100%;
+    height: 90%;
+    max-width: 300px;
     object-fit: cover;
-    overflow: hidden;
     border-top-left-radius: 1em;
     border-top-right-radius: 1em;
 }
@@ -238,12 +239,15 @@ entre des objets d'une interface ainsi que de les aligner */
 
 .activity .activity-cards .container-activity-cards .container-double {
     display: flex;
+    width: 400px;
+    min-width: 250px;
     flex-direction: column;
     justify-content: space-between;
 }
 
+/* overflow pour masquer le dépassement */
 .activity .activity-cards .container-activity-cards .container-double .activity-image-moy img {
-    width: 300px;
+    width: 100%;
     object-fit: cover;
     overflow: hidden;
     border-top-left-radius: 1em;
