--- a/css/phone.css
+++ b/css/phone.css
@@ -3,126 +3,58 @@
 
 @media screen and (max-width: 768px) {
 
-    .container {
-        padding-left: 0%;
-        padding-right: 2%;
+
+    header {
+        flex-direction: column;
+    }
+
+    header .logo {
         margin: auto;
-        width: 100%;
-    }
-
-    .container header {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-        padding: 10px;
-        width: 100%;
-        max-width: 100%;
-    }
-
-    .container header .logo {
-        display: flex;
-        justify-content: space-around;
-        align-items: center;
         margin-bottom: 5%;
-        margin-left: 50px;
     }
 
     nav {
-        text-align: center;
-        display: flex;
-        justify-content: center;
-    }
-
-    .container .container-page {
-        padding: 40px;
-    }
-
-    .container .container-page h1 {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        font-size: 25px;
-        font-weight: 700;
-    }
-
-    .container .container-page p {
-        align-items: center;
-        margin: 5%;
-    }
-
-    .mobile-btn-search {
-        width: 70px;
-        display: block;
-    }
-
-    .no-mobile-search-btn {
-        display: none;
-    }
-    
-
-    .container .container-page .hosting {
-        display: flex;
         flex-direction: column;
-        max-width: 100%;
-        justify-content: center;
-        align-items: center;
+        margin-bottom: 5%;
+        font-size: 50px;
     }
 
-    .container .container-page .hosting-cards {
-        max-width: 100%;
-        margin: 0;
-        padding: 1rem;
-        justify-content: center;
-        align-items: center;
-        order: 2;
-        margin: 22px;
+    h3 {
+        margin-bottom: 3%;
     }
 
-    .container .container-page .hosting .container-hosting-cards {
-        margin: 10px;
-    }
-
-    .container .container-page .hosting .container-hosting-cards article {
-        flex: 300px;
-    }
-
-    .container .container-page .hosting .popular {
-        max-width: 100%;
-        justify-content: center;
-        align-items: center;
-        order: 1;
-        align-items: unset;
-        margin: 0;
+    .container-hosting-cards {
+        flex-direction: column;
         width: 100%;
+    }
+
+    .hosting-cards{
+        order: 2;
+    }
+
+    .popular {
+        order: 1;
+    }
+
+    .container-activity-cards {
+        justify-content: center;
+    }
+
+    .activity .activity-cards .container-activity-cards article {
+        margin: 50px;
     }
 
     .container .activity .activity-cards .container-activity-cards {
-        justify-content: center;
-        flex-wrap: wrap;
-    }
-
-    .container .activity .activity-cards .container-activity-cards article .activity-image img {
-        width: 600px;
-        height: 220px;
-    }
-
-    .activity .activity-cards .container-activity-cards .container-double .activity-image-moy img {
-        width: 600px;
-        height: 220px;
-    }
-
-    footer {
         width: 100%;
-        margin: 10%;
+        flex-direction: column;
+        justify-content: center ;
     }
 
+    .container .activity .activity-cards .container-activity-cards article {
+    }
+    
     .footer {
-        display: flex;
-        justify-content: center;
         flex-direction: column;
-        align-content: center;
-    } 
-
+        margin: auto;
+    }
 }
