--- a/css/footer.css
+++ b/css/footer.css
@@ -17,26 +17,21 @@ footer .footer {
 footer ul {
     list-style-type: none;
     text-decoration: none;
+    justify-content: left;
 }
 
 footer .footer .about, .hosts, .help {
     margin-top: 2%;
-    width: 30%;
+    width: 20%;
     padding: 5px;
     font-weight: 500;
     font-size: large;
 }
 
-footer .about a, .hosts a, .help a {
-    padding: 0;
-    margin: 0;
+footer .about h3, .hosts h3, .help h3 {
+    margin-bottom: 5%;
 }
 
-footer .hosts h3, .help h3 {
-    margin-bottom: 5%;
-    margin-left: 5%;
-}
-
-footer .about h3 {
-    margin-bottom: 5%;
+footer li {
+    
 }
