--- a/css/body.css
+++ b/css/body.css
@@ -226,6 +226,7 @@ entre des objets d'une interface ainsi que de les aligner */
 
 .activity .activity-cards .container-activity-cards article .activity-image img {
     width: 100%;
+    height: 450px;
     object-fit: cover;
     border-top-left-radius: 1em;
     border-top-right-radius: 1em;
