--- a/css/phone.css
+++ b/css/phone.css
@@ -46,25 +46,46 @@
         justify-content: center ;
     }
 
-    .container .activity .activity-cards .container-activity-cards article {
-        width: 160%;
-        height: 250px;
+    .container .activity .activity-cards .container-activity-cards .container-double {
+        min-width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        
     }
 
-    .container .activity .activity-cards .container-activity-cards article .activity-image {
-        height: 100px;
+     .container .activity .activity-cards .container-activity-cards .container-double article {
+       width: 160%; 
+        
+    }
+
+     .container .activity .activity-cards .container-activity-cards .activity-image-moy article {
+       width: 160%; 
+        
+    }
+
+    .container .activity .activity-cards .container-activity-cards article {
+        width: 160%;
+        height: 220px;
+    }
+
+    .container .activity .activity-cards .container-activity-cards article .activity-image img {
+        max-height: 140px;
+        min-width: 100%;
+        object-fit: cover;
+    }
+
+    .activity .activity-cards .container-activity-cards .container-double .activity-image-moy img {
+        max-height: 140px;
+        object-fit: cover;
     }
 
     .footer {
         flex-direction: column;
     }
 
-    .footer li a {
-        padding-left: 0;
-
-    }
-
     footer .footer .about, .hosts, .help {
-        width: 20%;
+        justify-content: center;
+        margin-left: 20px;
     }
 }
