--- a/css/tablet.css
+++ b/css/tablet.css
@@ -91,7 +91,17 @@
     }
 
     .footer {
-        padding-left: 5%;
-        width: 100%;
+        justify-content: center;
     }
+
+    .footer h3 {
+        margin-bottom: 25px;
+        margin-left: 20px;
+    }
+
+    footer .footer .about, .hosts, .help {
+        margin-left: 20px;
+    }
+
+    
 }
